# template-of-multithread-scraper

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  setup.cfg
common/: logger.py  smart_request.py  utils.py
proxy/: checker.py  facade.py  providers.py  run_threads.py
