[tool.poetry]
name = "template-of-multithread-scraper"
version = "0.1.0"
description = ""
authors = ["avkatlant <avkatlant@gmail.com>"]
readme = "README.md"
packages = [{include = "template_of_multithread_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
types-requests = "^2.28.11.14"
types-pytz = "^2022.7.1.2"
flake8 = "^6.0.0"
pyright = "^1.1.295"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

